1583365640 | 30 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_turkish.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/notificationtoast.js,  M resources/webinterface/dashboard/progres
https://steamdb.info/patchnotes/4743972/

--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -717,7 +717,7 @@
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Header"	"Headset Notice"
 "Warning_DismissableWarning_DisplayInExtendedMode_Description"	"SteamVR ha rilevato che stai utilizzando il visore come un monitor. Per risultati ottimali, passa alla modalità di visualizzazione diretta."
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Description"	"SteamVR has detected your headset running as a monitor. For best results, please switch to Direct Display Mode."
-"Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Abilita la modalità diretta"
+"Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Modalità diretta: sì"
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Enable Direct Display Mode"
 "VRInitError_Driver_TrackedDeviceInterfaceUnknown_Header"	"Errore del dispositivo"
 "[english]VRInitError_Driver_TrackedDeviceInterfaceUnknown_Header"	"Device Error"
