--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -1886,7 +1886,7 @@
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
 "Explanation_Supersampling"	"*Osa käynnissä olevista sovelluksista täytyy ehkä käynnistää uudelleen asetusten voimaansaattamiseksi."
 "[english]Explanation_Supersampling"	"*Some applications may need to be restarted for settings to take effect."
-"MenuAction_Workshop_RunTools"	"Luo/ muokkaa ympäristöä"
+"MenuAction_Workshop_RunTools"	"Luo/muokkaa ympäristöä"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"SteamVR-ympäristöjen wiki"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
@@ -2411,7 +2411,7 @@
 "[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
 "SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Varmista seurantakameroiden ja vr-lasien yhteys"
 "[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
-"SteamVRSystemState_Standby_Application"	"Pue päälle VR-lasisi, jotta ne heräävät"
+"SteamVRSystemState_Standby_Application"	"Laita VR-lasit päähän, jotta ne heräävät."
 "[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
 "SteamVRSystemState_PseudoState_Welcome_Application"	"Kytke VR-lasisi"
 "[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
