--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -366,6 +366,15 @@
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
 	"Settings_Number_Selected": "%1$s Selected",
 
+	"Settings_Drivers_ShowDriverManagerUI": "Manage Add-Ons",
+	"Settings_Drivers_Number_Blocked": "%1$s Blocked",
+	"Settings_Drivers_Number_Disabled": "%1$s Disabled",
+	"Settings_Drivers_Header": "Manage SteamVR Add-Ons",
+	"Settings_Drivers_Unblock": "Unblock",
+	"Settings_Drivers_UnblockAll": "Unblock All",
+	"Settings_Drivers_UnblockAllTip": "NOTE: Unblocking and testing one add-on at a time is recommended.",
+	"Settings_Drivers_SomeBlocked": "Due to a recent crash, some SteamVR Add-Ons have been automatically blocked.",
+
 	"TestControllerTitle": "Testing Controller %1$s",
 	"TestController_NoController": "Turn on a controller to test it."
 }
