1584741593 | 27 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/reflections/dashboard_lights.png,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/bindingui_english.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/notificationtoast.js,  M resources/webinterface/dashboard/progressindicator.html,  M resources/webinterface/dashboard/scene
https://steamdb.info/patchnotes/4802651/

--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -349,6 +349,7 @@
   "BindingUI_List_Delete": "Delete",
   "BindingUI_List_Edit": "Edit",
   "BindingUI_List_View": "View",
+  "BindingUI_List_Select": "Activate",
   "BindingUI_List_LastUpdated": "Last Updated: ",
   "BindingUI_List_MinutesPlayed": "Played for %1$s minutes total",
   "BindingUI_List_MinutesPlayedThisMonth": "Played for %1$s minutes in the last 30 days",
