1585091837 | 69 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_spanish.txt,  M content/vrmonitor/translations/vrmonitor_errors_swedish.txt,  M content/vrmonitor/translations/vrmonitor_russian.txt,  M content/vrmonitor/translations/vrmonitor_swedish.txt,  M content/vrmonitor/translations/vrmonitor_thai.txt,  M drivers/htc/resources/localization/localization_cs_CZ.json,  M drivers/htc/resources/localization/localization_da_DK.json,  M drivers/htc/resources/localization/localization_de_DE.json,  M drivers/htc/resources/localization/localization_fi_FI.json,  M drivers/htc/resources/localization/localization_fr_FR.json,  M drivers/htc/resources/localization/localization_hu_HU.json,  M drivers/htc/resources/localization/localization_it_IT.json,  M drivers/htc/reso
https://steamdb.info/patchnotes/4815593/

--- a/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
@@ -395,13 +395,13 @@
 "[english]ChaperoneCalibrationState_Warning_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Header"	"Preparação de cômodo"
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Header"	"Room Setup"
-"ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Description"	"Parece que uma estação-base foi movida. Por favor, realize a preparação de cômodo para redefinir a sua área de jogo e os limites do espaço."
+"ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Description"	"Parece que uma estação-base foi movida. Realize a preparação de cômodo para redefinir a sua área de jogo e os limites do espaço."
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Description"	"It looks like a base station has moved. Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Action"	"Realizar preparação de cômodo"
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Warning_BaseStationRemoved_Header"	"Estação-base removida"
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Header"	"Base station removed"
-"ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"O SteamVR perdeu uma das estações-base de vista. Por favor, realize a preparação de cômodo mais uma vez."
+"ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"O SteamVR perdeu uma das estações-base de vista. Realize a preparação de cômodo mais uma vez."
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"SteamVR has lost track of one of your base stations. Please perform Room Setup again."
 "ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Realizar preparação de cômodo"
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Perform Room Setup"
@@ -449,13 +449,13 @@
 "[english]Lighthouse_UnknownEvent_Action"	"More info"
 "Lighthouse_BasestationFactoryError_Header"	"Erro da estação-base"
 "[english]Lighthouse_BasestationFactoryError_Header"	"Base Station Error"
-"Lighthouse_BasestationFactoryError_Description"	"Esta estação-base possui um defeito de fabricação. Por favor, entre em contato com a HTC para substituição."
+"Lighthouse_BasestationFactoryError_Description"	"Esta estação-base possui um defeito de fabricação. Entre em contato com a HTC para substituição."
 "[english]Lighthouse_BasestationFactoryError_Description"	"This base station has a manufacturing error. Please contact the manufacturer for a replacement base station."
 "Lighthouse_BasestationFactoryError_Action"	" "
 "[english]Lighthouse_BasestationFactoryError_Action"	" "
 "Lighthouse_Disambiguator_TooManyBasestations_Header"	"Muitas estações-base"
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Header"	"Too Many Base Stations"
-"Lighthouse_Disambiguator_TooManyBasestations_Description"	"Por favor, confirme que há apenas duas estações-base visíveis pelo seu headset e controles."
+"Lighthouse_Disambiguator_TooManyBasestations_Description"	"Confirme que há apenas duas estações-base visíveis pelo seu headset e controles."
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Description"	"Please make sure only two base stations are visible to your headset and controllers."
 "Lighthouse_Disambiguator_TooManyBasestations_Action"	"Tentar novamente"
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Action"	"Try again"
