--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -848,9 +848,9 @@
 "Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL" "https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 
 "Warning_DismissableWarning_HDCPError_Header" "SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description" "SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
-"Warning_DismissableWarning_HDCPError_Action" "More info"
-"Warning_DismissableWarning_HDCPError_ActionURL" "https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Description" "<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
+"Warning_DismissableWarning_HDCPError_Action" "Reset Headset"
+"Warning_DismissableWarning_HDCPError_ActionURL" "vrmonitor://reboothmd"
 
 "Warning_DismissableWarning_OutOfVideoMemory_Header" "Out Of Video Memory"
 "Warning_DismissableWarning_OutOfVideoMemory_Description" "Your system is running low on video memory which will cause poor performance. Try exiting the current application, or restarting SteamVR."
