--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -159,7 +159,7 @@
 "[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Status"
 "[english]MenuAction_StatusBar"	"Status"
-"MenuAction_RoomOverview"	"Rumöverblick"
+"MenuAction_RoomOverview"	"Visa rumsöverblick"
 "[english]MenuAction_RoomOverview"	"View Room Overview"
 "MenuAction_Settings"	"Inställningar"
 "[english]MenuAction_Settings"	"Settings"
@@ -2009,6 +2009,8 @@
 "[english]Settings_Bluetooth_Driver_Update"	"Update Bluetooth Driver"
 "Settings_Advanced_SupersamplingManualOverride"	"Manuell överskridning"
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Enable custom resolution"
+"Settings_PerApplication_AppResTitle"	"Anpassad upplösning"
+"[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
 "Settings_PerApplication_DashboardSuffix"	"(Övertoningsapplikation)"
 "[english]Settings_PerApplication_DashboardSuffix"	"(Overlay Application)"
 "Settings_PerApplication_CustomSuffix"	"(Anpassad)"
@@ -2091,6 +2093,8 @@
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
 "MenuAction_ShowManageTrackers"	"Hantera Vive Trackers"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
+"Settings_BaseStation_BluetoothBusy"	"Väntar på Bluetooth..."
+"[english]Settings_BaseStation_BluetoothBusy"	"Waiting for Bluetooth..."
 "Settings_BaseStation_BluetoothRequired"	"Aktivera Bluetooth för åtkomst till trådlösa funktioner som strömhantering och uppdatering av basstationer."
 "[english]Settings_BaseStation_BluetoothRequired"	"Please enable Bluetooth to access wireless features such as base station power management and updates."
 "Settings_BaseStation_OpenSettingsBluetooth"	"Visa Bluetooth-inställningar"
@@ -2215,6 +2219,8 @@
 "[english]MenuAction_OverlayViewer"	"Overlay Viewer"
 "MenuAction_WebDevToolsPlaceholder"	"Inga instanser funna"
 "[english]MenuAction_WebDevToolsPlaceholder"	"No Instances Found"
+"MessageBox_OpenWirelessSettings"	"Bluetooth-inställningar"
+"[english]MessageBox_OpenWirelessSettings"	"Bluetooth Settings"
 "FirmwareWizard_DeviceOverview_FailedToUpdate"	"Misslyckades att uppdatera"
 "[english]FirmwareWizard_DeviceOverview_FailedToUpdate"	"Failed To Update"
 "FirmwareWizard_DeviceOverview_LookingForDevice"	"Söker efter enhet ..."
@@ -2227,16 +2233,24 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Enhetsuppdatering"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Synlig nu i denna spårningssession."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Observerades i en tidigare spårningssession."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
 "BS20_ConfigureChannel_Identify"	"Klicka för att identifiera basstation."
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_VisibleNowInTracking"	"Synlig nu i denna spårningssession."
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
 "Monitor_RestartRequestedDialog_Title"	"Omstart krävs"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Starta om SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Avsluta SteamVR"
 "[english]Monitor_RestartRequestedDialog_Quit"	"Quit SteamVR"
+"BS20_ConfigureChannel_ProgressConnecting"	"\nAnsluter till basstationer...\n"
+"[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
 "Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Rörelseutjämning stöds ej på äldre versioner av Windows."
 "[english]Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Motion Smoothing is not supported on older versions of Windows."
 "Settings_Advanced_RefreshRate_Header"	"Uppdateringsfrekvens"
@@ -2253,12 +2267,44 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kunde inte ansluta. Klicka på Uppdatera för att försöka igen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
+"Settings_BaseStation_ContinueBaseStationUpdate"	"Återhämta från ofullständig uppdatering"
+"[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"FirmwareWizard_ProgressPercentStarting"	"[ Startar... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
 "FirmwareWizard_ProgressPercentSearching"	"[ Söker ... ]"
 "[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
 "BS20_UpdateRecovery_Refresh"	"Sök igen"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
 "BS20_UpdateRecovery_UpdateDevice"	"Återställ enhet"
 "[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"VRApplicationError_None"	"Inget fel"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Applikationen är redan registrerad"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Inget applikationsmanifest"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
+"VRApplicationError_NoApplication"	"Ingen applikation"
+"[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Ogiltigt index"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
+"VRApplicationError_UnknownApplication"	"Okänd applikation"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_ApplicationAlreadyRunning"	"Applikationen körs redan"
+"[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
+"VRApplicationError_InvalidManifest"	"Ogiltigt manifest"
+"[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
+"VRApplicationError_InvalidApplication"	"Applikationen var ogiltig"
+"[english]VRApplicationError_InvalidApplication"	"Application was invalid"
+"VRApplicationError_LaunchFailed"	"Applikationen kunde inte startas"
+"[english]VRApplicationError_LaunchFailed"	"Application launch failed"
+"VRApplicationError_SteamVRIsExiting"	"SteamVR avslutas"
+"[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_UnknownProperty"	"Okänd egenskap"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Ogiltig parameter"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"oculus_display_lost"	"Oculus-systemet har tappat anslutningen till skärmen. Kontrollera ditt headsets anslutning och starta om."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Sökning slutförd.<br><br><font color=#ffffff>Följande basstationer har inkompletta uppdateringar.<br><br>Välj en basstation och klicka på \"Återställ enhet\" för att fortsätta.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 "SteamVRSystemState_Standby"	"Väntar"
@@ -2289,5 +2335,63 @@
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
 "BS20_ConfigureChannel_ErrorLegend"	"Klicka på en kanallänk för mer information."
 "[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"MessageBox_RemindMeLater"	"Påminn mig senare"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Enhetsuppgraderingar krävs"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"MenuAction_ResetSeatedPosition"	"Återställ sittande position"
+"[english]MenuAction_ResetSeatedPosition"	"Reset Seated Position"
+"Settings_Bluetooth_RetryConnection"	"Försök ansluta igen"
+"[english]Settings_Bluetooth_RetryConnection"	"Retry Connection"
+"BS_PowerManagement_FullStandby"	"Viloläge"
+"[english]BS_PowerManagement_FullStandby"	"Sleep"
+"BaseStation_Mode_Text"	"Läge %1"
+"[english]BaseStation_Mode_Text"	"Mode %1"
+"BS20_ConfigureChannel_BaseStationName"	"Konfigurerar %1 på kanal %2"
+"[english]BS20_ConfigureChannel_BaseStationName"	"Configuring %1 on Channel %2"
+"BS20_ConfigureChannel_InUseByPrefix"	"Används just nu av:"
+"[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
+"BS20_ConfigureChannel_AutomaticConfiguration"	"Automatisk konfigurering"
+"[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
+"BS20_ConfigureChannel_ScanForMore"	"Sök efter fler"
+"[english]BS20_ConfigureChannel_ScanForMore"	"Scan For More"
+"BS20_ConfigureChannel_Apply"	"Verkställ"
+"[english]BS20_ConfigureChannel_Apply"	"Apply"
+"BS20_ConfigureChannel_Connecting"	"Ansluter..."
+"[english]BS20_ConfigureChannel_Connecting"	"Connecting..."
+"BS20_ConfigureChannel_Channel"	"Kanal: %1"
+"[english]BS20_ConfigureChannel_Channel"	"Channel: %1"
+"BS20_ConfigureChannel_ConnectionFailure"	"%1 kunde inte ansluta."
+"[english]BS20_ConfigureChannel_ConnectionFailure"	"%1 failed to connect."
+"BS20_ConfigureChannel_NoConflictOnChannel"	"Ingen konflikt på kanal %1"
+"[english]BS20_ConfigureChannel_NoConflictOnChannel"	"No conflict on Channel %1"
+"BS20_ConfigureChannel_ProgressWritingChannel"	"\nSkriver kanal...\n"
+"[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
+"HeadsetView_MenuLabel"	"Meny"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_FullscreenButtonLabel"	"Fullskärm"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_CloseButtonLabel"	"Stäng"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Båda ögonen"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Vänster öga"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Höger öga"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Båda ögonen - Vänsterdominant"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Båda ögonen - Högerdominant"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"Settings_Audio_Device_HMD"	"VR-headset"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Övrigt"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Standard"
+"[english]Settings_Audio_Default"	"Default"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_ExitNow"	"Avsluta nu (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
