--- a/drivers/htc/resources/localization/localization_pl_PL.json
+++ b/drivers/htc/resources/localization/localization_pl_PL.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Vive Tracker na prawej stopie",
 	"vive_tracker_left_shoulder": "Vive Tracker na lewym ramieniu",
 	"vive_tracker_right_shoulder": "Vive Tracker na prawym ramieniu",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Vive Tracker na lewym łokciu",
+	"vive_tracker_right_elbow": "Vive Tracker na prawym łokciu",
+	"vive_tracker_left_knee": "Vive Tracker na lewym kolanie",
+	"vive_tracker_right_knee": "Vive Tracker na prawym kolanie",
 	"vive_tracker_waist": "Vive Tracker na pasie",
 	"vive_tracker_chest": "Vive Tracker na klatce piersiowej",
 	"vive_tracker_camera": "Vive Tracker na kamerze",
