--- a/drivers/htc/resources/localization/localization_th_TH.json
+++ b/drivers/htc/resources/localization/localization_th_TH.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "เครื่องติดตาม Vive บนเท้าขวา",
 	"vive_tracker_left_shoulder": "เครื่องติดตาม Vive บนไหล่ซ้าย",
 	"vive_tracker_right_shoulder": "เครื่องติดตาม Vive บนไหล่ขวา",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "เครื่องติดตาม Vive บนข้อศอกซ้าย",
+	"vive_tracker_right_elbow": "เครื่องติดตาม Vive บนข้อศอกขวา",
+	"vive_tracker_left_knee": "เครื่องติดตาม Vive บนเข่าซ้าย",
+	"vive_tracker_right_knee": "เครื่องติดตาม Vive บนเข่าขวา",
 	"vive_tracker_waist": "เครื่องติดตาม Vive บนเอว",
 	"vive_tracker_chest": "เครื่องติดตาม Vive รอบอก",
 	"vive_tracker_camera": "เครื่องติดตาม Vive บนกล้อง",
