--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_vietnamese.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_vietnamese.json
@@ -19,7 +19,7 @@
 	"pairingdevice_a_knuckles_controllername": "một tay cầm Valve Index",
 	"pairingdevice_a_vivewand_shortname": "một tay cầm HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "một máy theo dõi HTC Vive",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Bắt cặp với %1$s",
 	"pairinginstructions_generic_desc": "Đặt tay cầm vào chế độ bắt cặp",
 	"pairsuccess_title": "Thành công!",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Nút Menu",
 	"pairing_button_b": "Nút B",
 	"pairing_knuckles_instructions_press": "Ấn rồi giữ nút %1$s và %2$s cho đến khi đèn trên tay cầm bắt đầu nhấp nháy xanh dương...",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Nhấn và giữ cả %1$s và %2$s tới khi đèn màu xanh trên bút bắt đầu chớp tắt...",
 	"pairing_tracker_instructions_press": "Ấn rồi giữ nút %1$s cho đến khi đèn trên máy theo dõi bắt đầu nhấp nháy xanh dương...",
 	"pairing_button_differentcontroller": "Tôi muốn bắt cặp một loại tay cầm khác...",
 	"pairing_button_done": "Xong",
