--- a/drivers/htc/resources/localization/localization_cs_CZ.json
+++ b/drivers/htc/resources/localization/localization_cs_CZ.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Sledovací zařízení Vive na pravém chodidle",
 	"vive_tracker_left_shoulder": "Sledovací zařízení Vive na levém rameni",
 	"vive_tracker_right_shoulder": "Sledovací zařízení Vive na pravém rameni",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Sledovací zařízení Vive na levém loktu",
+	"vive_tracker_right_elbow": "Sledovací zařízení Vive na pravém loktu",
+	"vive_tracker_left_knee": "Sledovací zařízení Vive na levém kolenu",
+	"vive_tracker_right_knee": "Sledovací zařízení Vive na pravém kolenu",
 	"vive_tracker_waist": "Sledovací zařízení Vive na pasu",
 	"vive_tracker_chest": "Sledovací zařízení Vive na hrudi",
 	"vive_tracker_camera": "Sledovací zařízení Vive na kameře",
