--- a/drivers/htc/resources/localization/localization_da_DK.json
+++ b/drivers/htc/resources/localization/localization_da_DK.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Vive-tracker på højre fod",
 	"vive_tracker_left_shoulder": "Vive-tracker på venstre skulder",
 	"vive_tracker_right_shoulder": "Vive-tracker på højre skulder",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Vive-tracker på venstre albue",
+	"vive_tracker_right_elbow": "Vive-tracker på højre albue",
+	"vive_tracker_left_knee": "Vive-tracker på venstre knæ",
+	"vive_tracker_right_knee": "Vive-tracker på højre knæ",
 	"vive_tracker_waist": "Vive-tracker på taljen",
 	"vive_tracker_chest": "Vive-tracker på brystet",
 	"vive_tracker_camera": "Vive-tracker på kamera",
