--- a/drivers/htc/resources/localization/localization_hu_HU.json
+++ b/drivers/htc/resources/localization/localization_hu_HU.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Vive követő a jobb lábon",
 	"vive_tracker_left_shoulder": "Vive követő a bal vállon",
 	"vive_tracker_right_shoulder": "Vive követő a jobb vállon",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Vive követő a bal könyökön",
+	"vive_tracker_right_elbow": "Vive követő a jobb könyökön",
+	"vive_tracker_left_knee": "Vive követő a bal térden",
+	"vive_tracker_right_knee": "Vive követő a jobb térden",
 	"vive_tracker_waist": "Vive követő a derékon",
 	"vive_tracker_chest": "Vive követő a mellkason",
 	"vive_tracker_camera": "Vive követő a kamerán",
