--- a/drivers/htc/resources/localization/localization_it_IT.json
+++ b/drivers/htc/resources/localization/localization_it_IT.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Vive Tracker sul piede destro",
 	"vive_tracker_left_shoulder": "Vive Tracker sulla spalla sinistra",
 	"vive_tracker_right_shoulder": "Vive Tracker sulla spalla destra",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Vive Tracker sul gomito sinistro",
+	"vive_tracker_right_elbow": "Vive Tracker sul gomito destro",
+	"vive_tracker_left_knee": "Vive Tracker sul ginocchio sinistro",
+	"vive_tracker_right_knee": "Vive Tracker sul ginocchio destro",
 	"vive_tracker_waist": "Vive Tracker sulla vita",
 	"vive_tracker_chest": "Vive Tracker sul torace",
 	"vive_tracker_camera": "Vive Tracker sulla telecamera",
