--- a/drivers/htc/resources/localization/localization_vi_VN.json
+++ b/drivers/htc/resources/localization/localization_vi_VN.json
@@ -9,10 +9,10 @@
 	"vive_tracker_right_foot": "Máy theo dõi Vive trên chân phải",
 	"vive_tracker_left_shoulder": "Máy theo dõi Vive trên vai trái",
 	"vive_tracker_right_shoulder": "Máy theo dõi Vive trên vai phải",
-	"vive_tracker_left_elbow": "Vive Tracker on Left Elbow",
-	"vive_tracker_right_elbow": "Vive Tracker on Right Elbow",
-	"vive_tracker_left_knee": "Vive Tracker on Left Knee",
-	"vive_tracker_right_knee": "Vive Tracker on Right Knee",
+	"vive_tracker_left_elbow": "Máy theo dõi Vive trên khuỷu tay trái",
+	"vive_tracker_right_elbow": "Máy theo dõi Vive trên khuỷu tay phải",
+	"vive_tracker_left_knee": "Máy theo dõi Vive trên đầu gối trái",
+	"vive_tracker_right_knee": "Máy theo dõi Vive trên đầu gối phải",
 	"vive_tracker_waist": "Máy theo dõi Vive trên thắt lưng",
 	"vive_tracker_chest": "Máy theo dõi Vive trên ngực",
 	"vive_tracker_camera": "Máy theo dõi Vive trên camera",
