--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -67,6 +67,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
 	"Settings_Audio_Default": "System Default",
 	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
 
@@ -259,6 +260,7 @@
 	"Settings_Classic" : "Classic",
 	"Settings_Near" : "Near",
 	"Settings_Middle" : "Middle",
+	"Settings_Far" : "Far",
 	"Settings_DesktopScale" : "Desktop Scale",
 	"Settings_DashboardScale" : "Dashboard Scale",
 	"Settings_DesktopDarkMode" : "Desktop Dark Mode",
