--- a/resources/webinterface/dashboard/localization/webhelper_czech.json
+++ b/resources/webinterface/dashboard/localization/webhelper_czech.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Hotovo",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "Resetování pozice vsedě",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
