--- a/resources/webinterface/dashboard/localization/webhelper_danish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_danish.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Færdig",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "Nulstiller oprindelig siddende position",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
