--- a/resources/webinterface/dashboard/localization/webhelper_hungarian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_hungarian.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Kész",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "Ülőhelyzeti kiindulópont alaphelyzetbe állítása",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
