--- a/resources/webinterface/dashboard/localization/webhelper_italian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_italian.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Ok",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "Resetta la posizione originale da seduto",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
