--- a/resources/webinterface/dashboard/localization/webhelper_portuguese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_portuguese.json
@@ -7,7 +7,7 @@
 	"Button_Close": "Fechar",
 	"Button_Delete": "Eliminar",
 	"Button_Replace": "Substituir",
-	"Button_Discard": "Descartar",
+	"Button_Discard": "Ignorar",
 	"Button_Save": "Guardar",
 	"Button_Done": "OK",
 	"Button_Back": "Voltar",
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "OK",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "A restaurar posição sentada original",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
