--- a/resources/webinterface/dashboard/localization/webhelper_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_ukrainian.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Готово",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "Скидання місця сидіння",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
