--- a/resources/webinterface/dashboard/localization/webhelper_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_vietnamese.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Xong",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "Cài đặt lại chỗ ngồi gốc",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
