1585185762 | 20 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/progressindicator.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M resources/webinterface/dashboard/vrwebui_shared.js,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_
https://steamdb.info/patchnotes/4820560/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -1320,7 +1320,7 @@
 		"VivePromoDesc"		"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 
 		"HLAlyxPromoTitle"	"New Environments Inspired By Half-Life: Alyx"
-		"HLAlyxPromoDesc"	"We've released two new environments inspired by Half-Life: Alyx!\nBecause you purchased the Valve Index, they're available to you,\nand to anyone you invite to join you, or who joins your public room."
+		"HLAlyxPromoDesc"	"These two environments are now available to everyone!\nVisit City 17 on your own, or invite your friends."
 		"HLAlyxC17AlleywayTitle"	"City 17 Alleyway"
 		"HLAlyxRussellsLabTitle"	"Russell's Lab"
 
