1585947467 | 32 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/webhelperoverlays.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/vrmonitor_english.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/notificationtoast.js,  M re
https://steamdb.info/patchnotes/4857517/

--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -282,6 +282,7 @@
 	"Settings_Chaperone_BoundsTransparency": "Transparency",
 	"Settings_Chaperone_Color": "Color",
 	"Settings_Chaperone_ActivationDistance": "Activation Distance (m)",
+	"Settings_Chaperone_WallHeight": "Wall Height (m)",
 	"Settings_Chaperone_SuitableForSmall": "Suitable for small playspaces. Use caution.",
 	"Settings_Chaperone_SuitableForMedium": "Suitable for medium playspaces.",
 	"Settings_Chaperone_SuitableForLarge": "Suitable for large playspaces.",
